# rust-server

./: Cargo.toml  build.rs
proto/: client.proto  common.proto  server.proto
proto/games/: paperio.proto
src/: config.rs  lib.rs  main.rs  protocol.rs
src/game/: traits.rs
src/games/: mod.rs
src/games/paperio/: config.rs  mod.rs  state.rs  systems.rs
src/network/: udp.rs
src/room/: mod.rs
src/session/: mod.rs
