[package]
name = "rust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
prost = "0.14.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[build-dependencies]
prost-build = "0.14.3"

[profile.dev]
debug = true